Continuação do código JavaScript
Criação da função imc, para calcular os valores do imc.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <label for="User">Peso: </label>
         <input id="peso" type="number" name="input">
 
-        <input type="submit" id="send" value="Calcular">
+        <input type="submit" id="calcular" value="Calcular">
 
         <div id="resultado"></div>
     </section>
